improve CORS and Security headers and upgrade deps
